<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">asr_demo</string>
    <string name="action_settings">Settings</string>
    <string name="mode_prompt">请选择识别模式</string>
    <string name="interim_results">临时结果</string>
    <string name="log_area">日志输出区域</string>
    <string name="start">按下录音，抬起结束，向上滑动取消</string>
    <string name="clear_log">清屏</string>
    <string name="close">关闭SDK</string>

    <string-array name="freetalk_modes">
        <item>一句话识别</item>
        <item>流式一句话</item>
        <item>实时转写(单句模式)</item>
        <item>实时转写(连续模式)</item>
    </string-array>

</resources>
