<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.asr_demo.MainActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/background_dark" >

            <TextView
                android:id="@+id/tv_logview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/log_area"
                android:lineSpacingExtra="1dp"
                android:textColor="@android:color/white" />
        </ScrollView>

        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:color/holo_orange_light"
            android:clickable="false"
            android:padding="10dp"
            android:src="@drawable/ic_cancel"
            android:visibility="invisible" />
    </RelativeLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="2" >

            <Spinner
                android:id="@+id/sp_mode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/freetalk_modes"
                android:prompt="@string/mode_prompt" />

            <CheckBox
                android:id="@+id/ck_interim_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/interim_results" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/bt_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="2" >

            <Button
                android:id="@+id/bt_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear_log"
                android:textSize="16sp" />

            <Button
                android:id="@+id/bt_close"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/close"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>

</LinearLayout>
